<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".activities.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/indigo_daisy"
            android:text="@string/register"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/register_description" />

<!--        <EditText-->
<!--            android:id="@+id/first_name"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginTop="50dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:autofillHints=""-->
<!--            android:background="@drawable/edittext_custom"-->
<!--            android:hint="@string/first_name"-->
<!--            android:inputType="text"-->
<!--            android:padding="15dp" />-->

<!--        <EditText-->
<!--            android:id="@+id/last_name"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:autofillHints=""-->
<!--            android:background="@drawable/edittext_custom"-->
<!--            android:hint="@string/last_name"-->
<!--            android:inputType="text"-->
<!--            android:padding="15dp" />-->

<!--        <EditText-->
<!--            android:id="@+id/email"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:autofillHints=""-->
<!--            android:background="@drawable/edittext_custom"-->
<!--            android:hint="@string/email"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:padding="15dp" />-->

<!--        <EditText-->
<!--            android:id="@+id/phone_number"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:autofillHints=""-->
<!--            android:background="@drawable/edittext_custom"-->
<!--            android:hint="@string/phone_number"-->
<!--            android:inputType="phone"-->
<!--            android:padding="15dp" />-->

<!--        <EditText-->
<!--            android:id="@+id/password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:autofillHints=""-->
<!--            android:background="@drawable/edittext_custom"-->
<!--            android:hint="@string/password"-->
<!--            android:inputType="textPassword"-->
<!--            android:padding="15dp" />-->

<!--        <EditText-->
<!--            android:id="@+id/confirm_password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:autofillHints=""-->
<!--            android:background="@drawable/edittext_custom"-->
<!--            android:hint="@string/confirm_password"-->
<!--            android:inputType="textPassword"-->
<!--            android:padding="15dp" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/first_name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/last_name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone_number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/register" />

        <ImageView
            android:id="@+id/back_to_login"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/return_to_login" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>